# rs-esp32s3-slint-st7789-demo

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: dma.rs  lib.rs  main.rs
ui/: main.slint
